Примеры на занятие 10 (solid)